- Added Xcode project and made minor fixes to allow building on OS X.
git-svn-id: svn://svn.code.sf.net/p/nanowasp/code/trunk@19 bb216399-ea36-0410-9f3c-cb6ba5a9af6e

--- a/Source/Z80/codegen/Makefile
+++ b/Source/Z80/codegen/Makefile
@@ -1,14 +1,14 @@
 all: opcodes
 
 mktables: mktables.c
-	gcc -g -o mktables mktables.c -lregex
+	gcc -g -o mktables mktables.c
 	
 force: clean opcodes
 	
 opcodes: mktables opcodes.lst mktables.spec
 	./mktables
-	cat opcodes_impl.c | grep "void Z80CPU" | sed "s/)/);/g" >opcodes_decl.h
-	cat opcodes_table.c | grep "Z80OpcodeTable" | sed "s/ =.*/;/" | sed "s/^/static /" > opcodes_table_decl.h
+	cat opcodes_impl.c | grep "void Z80CPU" | sed "s/)/);/g" | sed "s/Z80CPU:://g" >opcodes_decl.h
+	cat opcodes_table.c | grep "Z80OpcodeTable" | sed "s/ =.*/;/" | sed "s/^/static /" | sed "s/Z80CPU:://g" > opcodes_table_decl.h
 	
 clean:
 	rm -f mktables.exe opcodes_table.c opcodes_table_decl.h opcodes_impl.c opcodes_decl.h
